enforced rules for ratings, chocolate quantity on creation aand chocolate status/avaliablility
